--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -7,8 +7,8 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 1.16;
-  color:rgba(0, 0, 0, 1);
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
+  border-bottom: 1px solid rgba(255, 255, 255, 1);;
   padding: 110px 0 23px;
   margin: 0;
 }
@@ -30,7 +30,7 @@
   font-weight: 400;
   font-size: 50px;
   line-height: 1.16;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   padding: 0;
   margin: 0;
 }
@@ -40,7 +40,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.11;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   padding-top: 18px;
 }
 
@@ -50,7 +50,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.4;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   padding: 26px 0 0;
 }
 
@@ -60,7 +60,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.4;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   padding: 99px 0 0;
   transition: opacity .4s ease-in-out;
 } 
