--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   gap: 40px;
-  background-color: rgba(0, 0, 0, 1);
+  background: rgba(39, 39, 39, 1);
   list-style: none;
 }
 
