--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,8 +1,6 @@
 .profile__header_container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 0 70px;
 }
 
 .profile__wrapper {
@@ -16,7 +14,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 1.3;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   transition: opacity .4s ease-in-out;
   text-decoration: none;
 }
@@ -33,10 +31,10 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.3;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   transition: opacity .4s ease-in-out;
   text-decoration: none;
-  margin-left: 20px;
+  margin-left: 16px;
 }
 
 .profile__link_saved-movies:hover {
@@ -45,9 +43,11 @@
 }
 
 .profile__link {
+  position:absolute;
+  top: 21px;
+  right: 70px;
   max-width: 100px;
   transition: opacity .4s ease-in-out;
-  margin-left: 50px;
 }
 
 .profile__link:hover {
