--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   max-width: 396px;
-  height: 500px;
   margin: 70px auto;
   padding: 0;
   border: 0;
@@ -14,12 +13,12 @@
 }
 
 .form__title {
-  margin: 74px auto 123px;
+  margin: 75px 0 0;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 1.2;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   text-align: center;
 }
 
@@ -28,8 +27,8 @@
   justify-content: space-between;
   max-width: 396px;
   margin: 0 auto;
-  padding: 16px 0;
-  border-bottom: 1px solid rgba(232, 232, 232, 1);
+  padding: 13px 0;
+  border-bottom: 1px solid rgba(66, 66, 66, 1);
 }
 
 .form__field:last-of-type {
@@ -37,26 +36,28 @@
 }
 
 .form__input-label {
+  margin: 92px auto 0;
   display: flex;
   flex-direction: column;
   font-style: normal;
   font-weight: 400;
   font-size: 11px;
   line-height: 1.2;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
 }
 
 .form__input {
   width: 410px;
   display: flex;
   justify-content: space-between;
+  background: rgba(32, 32, 32, 1);
   border: 0;
 }
 
 .form__button {
   display: flex;
   flex-direction: column;
-  margin-top: 220px;
+  margin-top: 178px;
 }
 
 .form__edit {
@@ -64,7 +65,7 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 1.2;
-  color:rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   border: 0;
   background-color: transparent;
   padding: 0;
