--- a/src/components/SeachForm/SeachForm.css
+++ b/src/components/SeachForm/SeachForm.css
@@ -1,30 +1,29 @@
 .form-seach {
-  min-height: 222px;
-  display: flex;
-  align-items: center;
-  gap: 41px;
   margin: 0 70px;
-  border-bottom: 1px solid rgba(232, 232, 232, 1);
+  min-height: 217px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-seach__container {
-  min-height: 48px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  border: 2px solid rgba(232, 232, 232, 1);
-  border-radius: 50px;
-  padding: 0 7px 0 22px;
+  border: 0;
 }
 
 .form-seach__input {
   width: 100%;
   font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.3;
-  color: rgba(160, 160, 160, 1);
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.2;
+  color: rgba(139, 139, 139, 1);
+  background: rgba(32, 32, 32, 1);
   border: 0;
+  margin: 0;
+  text-align: center;
 }
 
 .form-seach__button {
@@ -45,7 +44,7 @@
 .form-seach__toggle {
   display: flex;
   align-items: center;
-  gap: 14px;
+  gap: 12px;
 }
 
 .form-seach__text {
@@ -53,7 +52,7 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 1.4;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
   margin: 0;
 }
 
@@ -61,24 +60,12 @@
   position: relative;
   display: flex;
   align-items: center;
-  max-width: 36px;
-  max-height: 20px;
+  min-width: 16px;
+  min-height: 16px;
   border-radius: 20px;
-  user-select: none;
   padding: 2px;
   background: rgba(43, 224, 128, 1);
   border: 0;
-}
-
-.toggle__turn {
-  display: flex;
-  min-width: 16px;
-  min-height: 16px;
-  margin: 2px 2px 2px 16px;
-  background: rgba(255, 255, 255, 1);
-  border-radius: 100%;
-  box-sizing: border-box;
-  transition: opacity .4s ease-in-out;
 }
 
 .toggle__turn:hover {
@@ -87,17 +74,15 @@
 }
 
 .form-seach__border {
-  border-bottom: 1px solid rgba(232, 232, 232, 1);
-  margin: 83px auto 10px;
+  width: 100%;
+  border-bottom: 1px solid rgba(66, 66, 66, 1);
+  margin: 15px auto 30px;
 }
 
 @media screen and (max-width: 1023px) {
   .form-seach {
     max-height: 226px;
-    flex-direction: column;
     margin: 0 10px;
-    box-sizing: border-box;
-    margin: 60px 30px 0;
   }
 }
 
@@ -111,13 +96,23 @@
   }
 
   .form-seach__container {
-    max-width: 270px;
-    padding: 0 7px 0 16px;
-    margin: 60px auto 0;
-    justify-content: initial;
+    margin: 98px 10px 0;
   }
 
   .form-seach__text {
     font-size: 11px;
+  }
+
+  .form-seach__input {
+    font-size: 18px;
+  }
+  
+  .form-seach__toggle {
+    flex-direction: row-reverse;
+    margin: 20px 0 20px;
+  }
+
+  .form-seach__border {
+    margin: 5px auto 30px;
   }
 }
