--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   min-width: 320px;
   max-width: 1280px;
   margin: 0;
+  background: rgba(32, 32, 32, 1);
   font-family: Inter, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
