--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -57,8 +57,8 @@
 
 @media screen and (max-width: 619px) {
   .footer {
-    max-height: 243px;
-    margin: 0 18px;
+    min-height: 243px;
+    margin: 0 10px;
   }
 
   .footer__title {
