--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,7 +1,6 @@
 .auth {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   max-width: 396px;
   height: 560px;
   margin: 70px auto;
@@ -10,8 +9,10 @@
 }
 
 .auth__container {
-  width: 100%;
-  margin: 0;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .auth__title {
