--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,10 +1,11 @@
 .movies__more {
-  min-height: 166px;
+  min-height: 140px;
   display: flex;
+  margin: 0 70px;
 }
 
 .movies__button-more {
-  margin: auto;
+  margin: 50px auto 80px;
   width: 320px;
   min-height: 36px;
   border: 0;
@@ -26,7 +27,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .movies__button-more {
-    width: 240px;
+  .movies__more {
+    margin: 0 40px;
   }
 }
