--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 1023px) {
   .moviescard__list {
     max-width: 708px;
-    margin: 0 30px;
+    padding: 40px 0 30px;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px 30px;
   }
@@ -17,7 +17,8 @@
 @media screen and (max-width: 767px) {
   .moviescard__list {
     max-width: 320px;
-    margin: 40px 10px 0;
+    margin: 0 10px;
+    padding: 40px 0 30px;
     grid-template-columns: repeat(1, 1fr);
     gap: 34px;
   }
