--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,18 +1,15 @@
 .auth {
-  display: flex;
-  flex-direction: column;
   max-width: 396px;
-  height: 560px;
-  margin: 70px auto;
+  margin: auto;
   padding: 0;
   border: 0;
 }
 
-.auth__container {
+.auth__header {
+  max-height: 217px;
   display: flex;
-  flex-grow: 1;
   flex-direction: column;
-  justify-content: flex-end;
+  padding: 70px 0 0;
 }
 
 .auth__title {
@@ -24,9 +21,15 @@
   color: rgba(255, 255, 255, 1);
 }
 
+.auth__container {
+  min-height: 266px;
+  max-width: 396px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
 .auth__input {
-  min-width: 381px;
-  margin: 0 auto 20px;
   border-style: none;
   background: rgba(32, 32, 32, 1);
   border-bottom: 1px solid rgba(66, 66, 66, 1);
@@ -41,17 +44,18 @@
   overflow: hidden;
 }
 
-.auth__input:last-of-type {
-  margin: 0 auto;
-} 
-
 .auth__input-label {
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.2;
   color: rgba(160, 160, 160, 1);
-  margin-bottom: 10px;
+  margin: 0;
+  padding: 24px 0 5px;
+}
+
+.auth__input-label:first-of-type {
+  padding: 0;
 }
 
 .auth__text {
@@ -62,6 +66,13 @@
   color: rgba(139, 139, 139, 1);
   text-align: center;
   margin: 16px 0;
+}
+
+.auth__footer {
+  max-height: 217px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
 .auth__link {
@@ -81,7 +92,7 @@
 }
 
 .auth__register-button {
-  position: relative;
+  margin-top: 69px;
   width: 100%;
   min-height: 45px;
   background: rgba(52, 86, 243, 1);
@@ -100,6 +111,10 @@
   opacity: .8;
 }
 
+.input-error {
+  color: rgba(255, 48, 85, 1);
+}
+
 .input-text-error {
   display: block;
   height: 14.52px;
@@ -108,16 +123,17 @@
   font-size: 10px;
   line-height: 1.2;
   color: rgba(255, 48, 85, 1);
-  margin-top: 10px;
-}
-
-.input-error {
-  color: rgba(255, 48, 85, 1);
+  margin-top: 6px;
 }
 
 @media screen and (max-width: 1023px) {
-  .auth {
-    margin: 232px auto;
+  .auth__header {
+    max-height: 379px;
+    padding: 232px 0 0;
+  }
+
+  .auth__footer {
+    min-height: 379px;
   }
 
   .auth__register-button {
@@ -127,25 +143,28 @@
 
 @media screen and (max-width: 767px) {
   .auth {
-    height: 694px;
-    margin: 56px 30px;
+    margin: 0 30px;
+  }
+
+  .auth__header {
+    max-height: 253px;
+    display: flex;
+    align-items: center;
+    padding: 56px 0 0;
   }
 
   .auth__title {
-    margin: 50px auto;
-    text-align: center;
+    margin: 50px 0 80px;
   }
 
-  .auth__input  {
-    min-width: 260px;
-    min-height: 46px;
+  .auth__footer {
+    min-height: 261px;
   }
-  
+
   .auth__register-button {
     min-height: 46px;
     font-size: 12px;
     line-height: 1.25;
-    margin: 0;
   }
 
   .auth__text {
@@ -157,5 +176,5 @@
   .auth__link {
     font-size: 12px;
     line-height: 1.25;
-  }  
+  }
 }
