--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,6 +1,7 @@
 .profile__header_container {
   display: flex;
   justify-content: space-between;
+  margin-left: 44px;
 }
 
 .profile__wrapper {
@@ -11,9 +12,9 @@
   display: flex;
   align-items: center;
   font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.3;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 1.4;
   color: rgba(255, 255, 255, 1);
   transition: opacity .4s ease-in-out;
   text-decoration: none;
@@ -24,13 +25,17 @@
   opacity: .5;
 }
 
+.profile__link_movies_active {
+  font-weight: 500;
+}
+
 .profile__link_saved-movies {
   display: flex;
   align-items: center;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.3;
+  font-size: 13px;
+  line-height: 1.4;
   color: rgba(255, 255, 255, 1);
   transition: opacity .4s ease-in-out;
   text-decoration: none;
@@ -40,6 +45,10 @@
 .profile__link_saved-movies:hover {
   cursor: pointer;
   opacity: .5;
+}
+
+.profile__link_saved-movies_active {
+  font-weight: 500;
 }
 
 .profile__link {
@@ -70,4 +79,3 @@
     display: none;
   }
 }
-
