--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -72,9 +72,46 @@
   .techs__container {
     margin: 0 50px;
   }
+
+  .techs__title {
+    line-height: 1.2;
+    padding: 90px 0 23px;
+  }
+
+  .techs__heading {
+    font-size: 50px;
+    line-height: 1.16;
+    padding: 80px 0 0;
+    margin: 0;
+  }
+
+  .techs__text {
+    font-size: 12px;
+    line-height: 1.5;
+    padding: 22px 0 0;
+    margin: 0;
+  }
+
+  .techs__wrapper {
+    margin: 83px auto 0;
+    padding: 0 0 90px;
+  }
+
+  .techs_link {
+    font-size: 12px;
+    line-height: 1.21;
+  }
 }
 
-@media screen and (max-width: 619px) {
+@media screen and (max-width: 767px) {
+  .techs {
+    background: rgba(32, 32, 32, 1);
+  }
+  
+  .techs__title {
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
+  }
+
   .techs__container {
     margin: 0 18px;
   }
@@ -89,12 +126,14 @@
     font-size: 30px;
     line-height: 1.2;
     padding: 60px 0 0;
+    margin: 0;
   }
 
   .techs__text {
     font-size: 11px;
     line-height: 1.5;
     padding: 24px 0 0;
+    margin: 0;
   }
 
   .techs__wrapper {
@@ -103,5 +142,10 @@
     grid-template-columns: repeat(2, 1fr);
     margin: 50px auto 0;
     padding-bottom: 70px;
+  }
+
+  .techs_link {
+    font-size: 12px;
+    line-height: 1.25;
   }
 }
