--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 @import url(./vendor/fonts/fonts.css);
 
 body {
-  min-width: 320px;
-  max-width: 1280px;
-  margin: 0;
   background: rgba(32, 32, 32, 1);
   font-family: Inter, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,4 +14,11 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.root {
+  min-width: 320px;
+  max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
