--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -143,7 +143,8 @@
 
 @media screen and (max-width: 767px) {
   .auth {
-    margin: 0 30px;
+    max-width: 260px;
+    margin: 0 auto;
   }
 
   .auth__header {
