--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,13 +1,11 @@
 .menu-mobile {
   position: fixed;
   z-index: 1;
-  right: -100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100vw;
   height: 100vh;
-  margin-top: -18px;
   background-color: rgba(32, 32, 32, 1);
   transition: .8s ease-in-out;
 }
@@ -17,8 +15,14 @@
 }
 
 .menu-mobile__container {
-  display: block;
-  
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-mobile__container:last-child {
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 105px;
 }
 
 .menu-mobile__close {
@@ -41,38 +45,60 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 65px;
+  padding-top: 40px;
 }
 
 .menu-mobile__list-item {
   list-style: none;
-  padding-bottom: 7px;
-  font-weight: 500;
-  font-size: 18;
-  line-height: 1.2px;
+  padding-bottom: 2px;
 }
 
 .menu-mobile__link {
-  width: auto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
   color: rgba(255, 255, 255, 1);
-  transition: .3s ease;
-  text-align: center;
-  padding-bottom: 7px;
   text-decoration: none;
+  transition: opacity .4s ease-in-out;
 }
 
-.menuMobile__link_active {
-  text-decoration: underline;
+.menu-mobile__link:hover {
+  cursor: pointer;
+  opacity: .5;
+}
+
+.menu-mobile__navigation .menu-mobile__link:hover {
+  box-shadow: 0 2px 0 0 rgba(255, 255, 255, 1)
+}
+
+.menu-mobile__link_type_account {
+  display: flex;
+  align-items: center;
+}
+
+.menu-mobile__image {
+  background: url("./../../images/profile/profile.svg") no-repeat center;
+  width: 100px;
+  height: 32px;
+  transition: opacity .4s ease-in-out;
+}
+
+.menu-mobile__image:hover {
+  cursor: pointer;
+  opacity: .5;
+}
+
+@media (min-width: 768px) {
+  .menu-mobile {
+    width: 68vw;
+  }
 }
 
 @media (max-width: 1023px) {
-  .menu-mobile {
-    width: 51vw;
-  }
-
   .menu-mobile__close {
     position:absolute;
-    top: 40px;
+    top: 20px;
     right: 20px;
   }
 
@@ -88,9 +114,9 @@
     padding-bottom: 4px;
   }
 
-  .menu-mobile__container:last-child {
+  /* .menu-mobile__container:last-child {
     margin-bottom: 90px;
-  }
+  } */
 }
 
 @media (min-width: 1024px) {
