--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,5 +1,7 @@
 .movies-card {
-  max-width: 270px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 10px;
   background: rgba(34, 34, 34, 1);
 }
@@ -46,8 +48,8 @@
   margin: 10px 12px 14px;
 }
 
-@media screen and (max-width: 1023px) {
+/* @media screen and (max-width: 1023px) {
   .movies-card {
     max-width: 339px;
   }
-}
+} */
