--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -5,21 +5,35 @@
   grid-gap: 38px 20px;
 }
 
+@media screen and (max-width: 1279px) {
+  .moviescard__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .moviescard__list {
-    max-width: 708px;
+    margin: 0 30px;
     padding: 40px 0 30px;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px 30px;
+    grid-gap: 36px 30px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .moviescard__list {
-    max-width: 320px;
+    margin: 0 10px;
+    padding: 40px 0 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 619px) {
+  .moviescard__list {
     margin: 0 10px;
     padding: 40px 0 30px;
     grid-template-columns: repeat(1, 1fr);
-    gap: 34px;
+    grid-gap: 20px 0;
   }
 }
