--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,6 +1,7 @@
 .menu-mobile {
   position: fixed;
   z-index: 1;
+  right: -100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
