--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -2,7 +2,8 @@
   width: 40px;
   height: 43px;
   position: absolute;
-  right: 24px;
+  top: 13px;
+  right: 22px;
   transition: opacity .4s ease-in-out;
   border: 0;
   background: url('../../images/header/hamburger.svg') no-repeat;
@@ -21,6 +22,6 @@
 
 @media (max-width: 767px) {
   .hamburger {
-    right: 4px;
+    right: 5px;
   }
 }
