--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,6 +32,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  text-decoration: none;
 }
 
 .footer__link {
@@ -85,6 +86,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+
   }
 
   .footer__link {
