--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -5,6 +5,16 @@
   grid-gap: 38px 20px;
 }
 
+.moviescard__text {
+  margin: 0 70px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+}
+
 @media screen and (max-width: 1100px) {
   .moviescard__list {
     grid-template-columns: repeat(3, 1fr);
