--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,4 +1,4 @@
-.form-seach {
+.form-search {
   margin: 0 70px;
   min-height: 217px;
   display: flex;
@@ -7,14 +7,14 @@
   justify-content: center;
 }
 
-.form-seach__container {
+.form-search__container {
   width: 100%;
   display: flex;
   justify-content: space-between;
   border: 0;
 }
 
-.form-seach__input {
+.form-search__input {
   width: 100%;
   font-style: normal;
   font-weight: 500;
@@ -27,32 +27,32 @@
   text-align: center;
 }
 
-.form-seach__button {
+.form-search__button {
   border: 0;
   background-color: transparent;
   transition: opacity .4s ease-in-out;
 }
 
-.form-seach__button:hover {
+.form-search__button:hover {
   cursor: pointer;
   opacity: .5;
 }
 
-.form-seach__image_blue {
+.form-search__image_blue {
   min-width: 34px;
 }
 
-.form-seach__image_grey {
+.form-search__image_grey {
   min-width: 34px;
 }
 
-.form-seach__toggle {
+.form-search__toggle {
   display: flex;
   align-items: center;
   gap: 12px;
 }
 
-.form-seach__text {
+.form-search__text {
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -62,15 +62,7 @@
 }
 
 .toggle {
-  position: relative;
-  display: flex;
-  align-items: center;
-  max-width: 36px;
-  max-height: 20px;
-  border-radius: 20px;
-  padding: 2px;
-  background: rgba(32, 32, 32, 1);
-  border: 0;
+  display: none;
   transition: opacity .4s ease-in-out;
 }
 
@@ -79,18 +71,19 @@
   opacity: .5;
 }
 
-.toggle__turn_active {
+.toggle__turn {
+  position: relative;
   display: flex;
-  min-width: 16px;
-  min-height: 16px;
-  margin: 2px 2px 2px 16px;
-  background: rgba(43, 224, 128, 1);
-  border-radius: 100%;
-  box-sizing: border-box;
+  align-items: center;
+  max-width: 36px;
+  max-height: 20px;
+  border-radius: 20px;
+  background: rgba(32, 32, 32, 1);
   transition: opacity .4s ease-in-out;
 }
 
-.toggle__turn {
+.toggle__turn::after {
+  content: '';
   display: flex;
   min-width: 16px;
   min-height: 16px;
@@ -98,7 +91,12 @@
   background: rgba(245, 245, 245, 1);
   border-radius: 100%;
   box-sizing: border-box;
-  transition: opacity .4s ease-in-out;
+}
+
+.toggle:checked ~
+.toggle__turn::after {
+  margin: 2px 2px 2px 16px;
+  background: rgba(43, 224, 128, 1);
 }
 
 .toggle__turn:hover {
@@ -106,51 +104,50 @@
   opacity: .5;
 }
 
-.form-seach__border {
+.form-search__border {
   width: 100%;
   border-bottom: 1px solid rgba(66, 66, 66, 1);
   margin: 15px auto 30px;
 }
 
 @media screen and (max-width: 1023px) {
-  .form-seach {
+  .form-search {
     margin: 0 30px;
     min-height: 246px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .form-seach {
+  .form-search {
     margin: 0 10px;
     min-height: 248px;
   }
 
-  .form-seach__image_grey {
+  .form-search__image_grey {
     display: none;
   }
 
-  .form-seach__input { 
+  .form-search__input { 
     text-align: start;
   }
 
-
-  .form-seach__container {
+  .form-search__container {
     margin: 98px 10px 0;
   }
 
-  .form-seach__text {
+  .form-search__text {
     font-size: 11px;
   }
 
-  .form-seach__input {
+  .form-search__input {
     font-size: 18px;
   }
   
-  .form-seach__toggle {
+  .form-search__toggle {
     margin: 20px 0 20px;
   }
 
-  .form-seach__border {
+  .form-search__border {
     margin: 5px auto 30px;
   }
 }
